--- a/RecyclerViewExample/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewExample/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,12 @@
         android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/newContactButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_gravity="bottom|right"
-        android:src="@android:drawable/ic_dialog_map"
+        android:src="@android:drawable/ic_input_add"
         app:backgroundTint="#FF0000"
         app:borderWidth="0dp" />
 </FrameLayout>
